--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ body {
 .legend {
     font-size: 15px;
     width: 120px;
+    height: 260px;
     float: left;
     margin: 0 0 10px 10px;
     user-select: none;
