Prevent right clicking

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     background-color: white;
     border-radius: 4px;
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+    user-select: none;
 }
 
 /* Defines control buttons */
@@ -106,6 +107,7 @@ body {
 
 /* Time Control */
 .timeline {
+    user-select: none;
     border-radius: 4px;
     margin: 0 0 10px 10px;
     min-width: 300px;
